# lithuanian-real-estate

./: .gitmodules  compose.yml
flat-processing-job/: .env.tmpl  Dockerfile  README.md  makefile  pyproject.toml  requirements.txt
flat-processing-job/src/: poc.ipynb
flat-processing-job/src/flat_processing_job/: __init__.py  pipeline.py  settings.py
flat-processing-job/src/flat_processing_job/database/: connection.py  retrieval.py  schemas.py
html-parser/: .env.tmpl  Dockerfile  pyproject.toml  requirements.txt
html-parser/src/property_data_pipeline/: __init__.py  main.py
html-parser/src/property_data_pipeline/crawler/: generate_test_data.py  html_retrieval.py  links_retrieval.py  object_handling.py
html-parser/src/property_data_pipeline/database/: __init__.py  connection.py  schemas.py
html-parser/src/property_data_pipeline/parser/: html_to_db.py  parse_html.py  pydantic_models.py
html-parser/src/tests/: test_collecting_links.py
html-parsing-job/: .env.tmpl  .gitignore  pyproject.toml  requirements.txt
html-parsing-job/src/parsing_job/: __init__.py  main.py
html-parsing-job/src/parsing_job/database/: __init__.py  connection.py  retrieval.py  schemas.py
html-parsing-job/src/parsing_job/parser/: html_to_db.py  parse_html.py  pydantic_models.py
html-retrieval-job/: .env.tmpl  Dockerfile  pyproject.toml
html-retrieval-job/src/scraping_job/: __init__.py  main.py
html-retrieval-job/src/scraping_job/database/: __init__.py  connection.py  schemas.py
html-retrieval-job/src/scraping_job/scraping/: links_retrieval.py  object_handling.py
html-retrieval-job/src/tests/: test_collecting_links.py
html-retrieval-job/src/tests/test_pages/: namai.html  namu_nuoma.html
html-retriever/: Dockerfile  pyproject.toml  requirements.txt
html-retriever/src/scraping_job/database/: __init__.py  connection.py
html-retriever/src/scraping_job/scraping/: html_retrieval.py  links_retrieval.py
html-retriever/src/tests/test_pages/: butai.html  butu_nuoma.html
scraping-service/: compose.yml  pyproject.toml
scraping-service/src/scraping_service/: app.py
scraping-service/src/scraping_service/helpers/: driver.py
